Fixed small font issue on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -226,7 +226,7 @@ main {
         padding-bottom: 30px;
     }
     .start {
-        font-size: 17px;
+        font-size: 16px;
     }
     .calendar-link {
         font-size: 12px;
